# diary-md

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
docs/: TODO.md  WEB_INTERFACE_PLAN.md
src/diary_md/: __init__.py  _version.py  exceptions.py  exchange.py  git.py  models.py  parser.py
src/diary_md/cli/: __init__.py  digest.py  reconcile.py  update.py
tests/: __init__.py  conftest.py  test_cli_digest.py  test_exchange.py  test_models.py  test_parser.py
